# acomp

./: actividad1.py  actividad2.py  actividad3.py  actividad4.py  actividad5.py  actividad6.py  actividad7.py  modular.py  natural.py  pyproject.toml  readme.md  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py
