[tool.poetry]
name = "alcp"
version = "0.1.0"
description = ""
authors = ["Adrián Lattes <adrianlattes@disroot.org>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
